--- a/sVanilla/src/ClientUi/Download/DownloadedListWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadedListWidget.ui
@@ -66,11 +66,14 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnDelete">
+        <property name="toolTip">
+         <string>clear</string>
+        </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/delete.svg"/>
+         <iconset theme=":/icon/delete.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>CleanButtonPatch</string>
@@ -103,7 +106,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="labelRemainingTime">
+       <widget class="QLabel" name="labelPublishDate">
         <property name="text">
          <string/>
         </property>
@@ -111,6 +114,13 @@
       </item>
       <item>
        <widget class="QLabel" name="labelDuration">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelPublisher">
         <property name="text">
          <string/>
         </property>
@@ -131,11 +141,14 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnRestart">
+        <property name="toolTip">
+         <string>restart</string>
+        </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/restart.svg"/>
+         <iconset theme=":/icon/restart.svg"/>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -147,11 +160,14 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnFolder">
+        <property name="toolTip">
+         <string>open floder in files explorer</string>
+        </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/folder.svg"/>
+         <iconset theme=":/icon/folder.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>CleanButtonPatch</string>
@@ -166,11 +182,14 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="toolTip">
+         <string>detail</string>
+        </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/info.svg"/>
+         <iconset theme=":/icon/info.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>CleanButtonPatch</string>
