--- a/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
@@ -1,127 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <class>VideoListItemWidget</class>
-  <widget class="QWidget" name="VideoListItemWidget">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>670</width>
-        <height>102</height>
-      </rect>
-    </property>
-    <property name="windowTitle">
-      <string>VideoListWidget</string>
-    </property>
-    <layout class="QHBoxLayout" name="VideoListItemLayout">
-      <property name="spacing">
-        <number>0</number>
-      </property>
-      <property name="leftMargin">
-        <number>10</number>
-      </property>
-      <property name="topMargin">
-        <number>0</number>
-      </property>
-      <property name="rightMargin">
-        <number>10</number>
-      </property>
-      <property name="bottomMargin">
-        <number>0</number>
-      </property>
-      <item>
-        <widget class="QLabel" name="labelTitle">
-          <property name="text">
-            <string />
-          </property>
-          <property name="margin">
-            <number>10</number>
-          </property>
-        </widget>
-      </item>
-      <item>
-        <widget class="QLabel" name="labelAuthor">
-          <property name="text">
-            <string />
-          </property>
-          <property name="margin">
-            <number>5</number>
-          </property>
-        </widget>
-      </item>
-      <item>
-        <widget class="QLabel" name="labelDuration">
-          <property name="text">
-            <string />
-          </property>
-          <property name="margin">
-            <number>5</number>
-          </property>
-        </widget>
-      </item>
-      <item>
-        <widget class="QLabel" name="labelPulishDate">
-          <property name="text">
-            <string />
-          </property>
-          <property name="margin">
-            <number>5</number>
-          </property>
-        </widget>
-      </item>
-      <item>
-        <spacer name="horizontalSpacer">
-          <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-            <size>
-              <width>40</width>
-              <height>20</height>
-            </size>
-          </property>
-        </spacer>
-      </item>
-      <item>
-        <widget class="QPushButton" name="btnInfo">
-          <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-            </sizepolicy>
-          </property>
-          <property name="text">
-            <string />
-          </property>
-          <property name="icon">
-              <iconset theme=":/icon/info.svg"/>
-          </property>
-          <property name="_vanillaStyle_Patch" stdset="0">
-            <string>CleanButtonPatch</string>
-          </property>
-        </widget>
-      </item>
-      <item>
-        <widget class="QPushButton" name="btnDownload">
-          <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-            </sizepolicy>
-          </property>
-          <property name="text">
-            <string />
-          </property>
-          <property name="icon">
-              <iconset theme=":/icon/download.svg"/>
-          </property>
-          <property name="_vanillaStyle_Patch" stdset="0">
-            <string>CleanButtonPatch</string>
-          </property>
-        </widget>
-      </item>
-    </layout>
-  </widget>
-  <layoutdefault spacing="6" margin="11" />
-  <connections />
+ <class>VideoListItemWidget</class>
+ <widget class="QWidget" name="VideoListItemWidget">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>670</width>
+    <height>102</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>VideoListWidget</string>
+  </property>
+  <layout class="QHBoxLayout" name="VideoListItemLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="leftMargin">
+    <number>10</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>10</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <item>
+    <widget class="QLabel" name="labelTitle">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="margin">
+      <number>10</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="labelAuthor">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="margin">
+      <number>5</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="labelDuration">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="margin">
+      <number>5</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="labelPulishDate">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="margin">
+      <number>5</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QPushButton" name="btnInfo">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>detail</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset theme=":/icon/info.svg"/>
+     </property>
+     <property name="_vanillaStyle_Patch" stdset="0">
+      <string>CleanButtonPatch</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="btnDownload">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>download</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset theme=":/icon/download.svg"/>
+     </property>
+     <property name="_vanillaStyle_Patch" stdset="0">
+      <string>CleanButtonPatch</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <resources/>
+ <connections/>
 </ui>
