--- a/sVanilla/src/ClientUi/MainWindow/MainWindow.ui
+++ b/sVanilla/src/ClientUi/MainWindow/MainWindow.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>660</width>
-    <height>398</height>
+    <height>480</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
