--- a/sVanilla/src/ClientUi/Setting/About.ui
+++ b/sVanilla/src/ClientUi/Setting/About.ui
@@ -37,6 +37,12 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="minimumSize">
+      <size>
+       <width>80</width>
+       <height>0</height>
+      </size>
+     </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <property name="leftMargin">
        <number>0</number>
@@ -90,7 +96,7 @@
      <widget class="QWidget" name="aboutWidget">
       <layout class="QGridLayout" name="gridLayout_3">
        <property name="bottomMargin">
-        <number>30</number>
+        <number>16</number>
        </property>
        <item row="3" column="0" colspan="2">
         <widget class="QWidget" name="widgetLink" native="true">
@@ -226,6 +232,12 @@ image: url(&quot;:/appIcon/sVanillaTitleLight.svg&quot;);
           </item>
           <item>
            <widget class="QLabel" name="labelInfo">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="font">
              <font>
               <pointsize>10</pointsize>
@@ -236,8 +248,8 @@ image: url(&quot;:/appIcon/sVanillaTitleLight.svg&quot;);
              <string>sVanilla means flowing gracefully like vanilla.
 hope it accompanies your life like vanilla, bringing a subtle fragrance to your daily routine.</string>
             </property>
-            <property name="textFormat">
-             <enum>Qt::AutoText</enum>
+            <property name="wordWrap">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -425,7 +437,7 @@ hope it accompanies your life like vanilla, bringing a subtle fragrance to your 
          </layout>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="4" column="0" colspan="2">
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
