--- a/sVanilla/src/ClientUi/Setting/AdvanceSettings.ui
+++ b/sVanilla/src/ClientUi/Setting/AdvanceSettings.ui
@@ -6,12 +6,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>579</width>
+    <width>851</width>
     <height>730</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>AdvanceSetting</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">.QWidget{
+	background-color: transparent;
+}</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
@@ -39,9 +44,12 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>607</width>
-        <height>711</height>
+        <width>822</width>
+        <height>738</height>
        </rect>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <property name="leftMargin">
@@ -94,12 +102,32 @@
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
-               <property name="text">
-                <string/>
+               <property name="minimumSize">
+                <size>
+                 <width>24</width>
+                 <height>24</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>24</width>
+                 <height>24</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">.QPushButton{
+	border: none;
+}</string>
                </property>
                <property name="icon">
                 <iconset resource="../../../resource/sVanilla.qrc">
                  <normaloff>:/icon/bar/video.svg</normaloff>:/icon/bar/video.svg</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>20</width>
+                 <height>20</height>
+                </size>
                </property>
                <property name="_vanillaStyle_Patch" stdset="0">
                 <string>ButtonIconPatch</string>
@@ -208,12 +236,14 @@
             <property name="font">
              <font>
               <pointsize>10</pointsize>
-              <weight>Light</weight>
              </font>
             </property>
             <property name="text">
              <string>The video page defaults to using a grid layout
 where &quot;default&quot; here refers to each new search starting.</string>
+            </property>
+            <property name="wordWrap">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -426,12 +456,13 @@ where &quot;default&quot; here refers to each new search starting.</string>
             <property name="font">
              <font>
               <pointsize>10</pointsize>
-              <weight>Light</weight>
              </font>
             </property>
             <property name="text">
-             <string>Not parsing the playlist means that the video corresponding to the given link is included in a playlist
-And by default, the playlist is parsed. Only download the single video corresponding to the link.</string>
+             <string>Not parsing the playlist means that the video corresponding to the given link is included in a playlist And by default, the playlist is parsed. Only download the single video corresponding to the link.</string>
+            </property>
+            <property name="wordWrap">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -476,12 +507,32 @@ And by default, the playlist is parsed. Only download the single video correspon
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
-               <property name="text">
-                <string/>
+               <property name="minimumSize">
+                <size>
+                 <width>24</width>
+                 <height>24</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>24</width>
+                 <height>24</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">.QPushButton{
+	border: none;
+}</string>
                </property>
                <property name="icon">
                 <iconset resource="../../../resource/sVanilla.qrc">
                  <normaloff>:/icon/bar/download.svg</normaloff>:/icon/bar/download.svg</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>20</width>
+                 <height>20</height>
+                </size>
                </property>
                <property name="_vanillaStyle_Patch" stdset="0">
                 <string>ButtonIconPatch</string>
@@ -545,7 +596,6 @@ And by default, the playlist is parsed. Only download the single video correspon
             <property name="font">
              <font>
               <pointsize>10</pointsize>
-              <weight>Light</weight>
              </font>
             </property>
             <property name="text">
@@ -715,12 +765,14 @@ And by default, the playlist is parsed. Only download the single video correspon
             <property name="font">
              <font>
               <pointsize>10</pointsize>
-              <weight>Light</weight>
              </font>
             </property>
             <property name="text">
              <string>Enable advanced settings for aria2
 Only for advanced users who need to customize settings.</string>
+            </property>
+            <property name="wordWrap">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
