--- a/sVanilla/src/ClientUi/Setting/PluginsInfo.ui
+++ b/sVanilla/src/ClientUi/Setting/PluginsInfo.ui
@@ -87,6 +87,11 @@
      </column>
      <column>
       <property name="text">
+       <string>Load</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>Version</string>
       </property>
      </column>
