--- a/sVanilla/src/SUI/NameRule/NameRuleWidget.ui
+++ b/sVanilla/src/SUI/NameRule/NameRuleWidget.ui
@@ -17,6 +17,12 @@
    <string notr="true">CleanButtonPatch</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+          <number>0</number>
+      </property>
+      <property name="sizeConstraint">
+          <enum>QLayout::SetNoConstraint</enum>
+      </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
